test-data/invalid/skipped-strings.jsx
const Test = () => {
    const string = 'string';
    Translate[string]('test');
    Translate.something('test');
    NotTranslate.string('test');
};
